# django-tours

./: .gitignore  LICENSE  MANIFEST.in  README.md  manage.py  pyproject.toml  setup.py
.github/: FUNDING.yml
src/tours/: admin.py  forms.py  models.py  settings.py
src/tours/migrations/: 0001_initial.py
src/tours/templatetags/: tours.py
tests/app/: settings.py  urls.py  views.py
tests/templates/: index.html
tours/: admin.py  apps.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py
tours/migrations/: 0001_initial.py
tours/templates/tours/tags/: tour.html
tours/templatetags/: tours.py
