[build-system]
requires = ["setuptools >= 61.0", "wheel", "django"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tours"
version = "1.0.5"
authors = [
  { name = "Wilmer Martinez", email = "info@wilmermartinez.dev" }
]
description = "Django app to display tours with shepherdjs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [# https://pypi.org/classifiers/

    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    #"Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",

    "Intended Audience :: Developers",

    "Topic :: Software Development :: Libraries :: Python Modules",

    "Environment :: Web Environment",

    "License :: OSI Approved :: MIT License",

    "Natural Language :: English",
    "Natural Language :: Spanish",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Framework :: Django :: 3",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
dependencies = [
  "Django>=3",
]
keywords = [
  "django",
  "tours",
  "shepherdjs"
]

[project.urls]
Homepage = "https://github.com/wilmerm/django-tours"
Issues = "https://github.com/wilmerm/django-tours/issues"
Repository = "https://github.com/wilmerm/django-tours"
